[workspace]
members = [
    "blockchain", "wallet", "mempool"
, "defi/amm"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
